# Excel_VBA_MCP

./: .gitignore  AGENTS.md  MULTI_MCP_QUICKSTART.md  README.md  V2.4问题记录.md  excel-core-mcp.yaml  excel-mcp.yaml  excel-pq-mcp.yaml  excel-recovery-mcp.yaml  excel-vba-mcp.yaml  mcp.example.json  pyproject.toml  runtime-config.yaml
.trae/documents/: V2.4开发计划.md
docs/: ExcelForge V2.5 — 工具域 Profile 参考手册.md  工具域与Profile参考.md
docs/changelog/: v2.4.md  v2.5.md
docs/design/: README.md
docs/features/: Batch_批量处理指南.md  Chart_图表指南.md  OOXML_Package_使用指南.md
examples/: mcp.automation.example.json  mcp.basic_edit.example.json  mcp.custom-bundles.example.json
excelforge/: __init__.py  config.py  main.py
excelforge/gateway/: bundles.yaml  config.py  host.py  legacy_wrapper.py  profile_resolver.py  profiles.dev.yaml  profiles.yaml  runtime_client.py  runtime_client_manager.py  runtime_identity.py  tool_manifest_registry.py  utils.py
excelforge/models/: analysis_models.py  error_models.py  range_models.py  sheet_models.py  table_models.py  workbook_ops_models.py
excelforge/runtime/: __main__.py  bootstrap.py  excel_worker.py  handler.py  lifecycle.py  main.py  pipe_server.py  workbook_registry.py  worker_health.py
excelforge/runtime_api/: __init__.py  analysis_api.py  audit_api.py  context.py  dispatcher.py  format_api.py  formula_api.py  names_api.py  pq_api.py  range_api.py  recovery_api.py  server_api.py  sheet_api.py  table_api.py  vba_api.py  workbook_api.py  workbook_ops_api.py
excelforge/services/: analysis_service.py  audit_service.py  format_service.py  (+9 more)
(+24 files in other folders)
